<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/configuracion"
        android:title="@string/Configuracion"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/Informacion"
        android:title="@string/Informacion"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="always"
        android:orderInCategory="3"
        />

    <item
        android:id="@+id/buscar"
        android:title="@string/Buscar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:orderInCategory="1"/>
</menu>